[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/skull.png" type="Texture" id=1]
[ext_resource path="res://Assets/7.png" type="Texture" id=2]
[ext_resource path="res://Assets/5.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/bigs.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/fonts/smalls.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/gameSelect.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -525.0
margin_right = 470.0
margin_bottom = 600.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 470, 600 )
custom_constants/separation = 200
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1040.0
margin_bottom = 462.0
custom_constants/separation = 300
alignment = 1

[node name="five" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 458.0
icon = ExtResource( 3 )

[node name="seven" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 670.0
margin_right = 1040.0
margin_bottom = 458.0
icon = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 662.0
margin_right = 1040.0
margin_bottom = 1120.0
alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 335.0
margin_right = 705.0
margin_bottom = 458.0
rect_pivot_offset = Vector2( 200, 250 )
icon = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 250, 35 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Choose GameMode"
align = 1
valign = 3

[node name="firstToFive" type="Label" parent="."]
margin_left = 343.0
margin_top = 159.0
margin_right = 506.0
margin_bottom = 192.0
theme = ExtResource( 5 )
text = "First To Five"

[node name="firstToSeven" type="Label" parent="."]
margin_left = 538.0
margin_top = 161.0
margin_right = 726.0
margin_bottom = 194.0
theme = ExtResource( 5 )
text = "First To Seven"

[node name="Label" type="Label" parent="."]
margin_left = 428.0
margin_top = 359.0
margin_right = 625.0
margin_bottom = 392.0
theme = ExtResource( 5 )
text = "Test Your Will"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
